# econkit

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
data/: README.md  sample_economic_data.csv
docs/: README.md  api.md  architecture.md  cli.md  examples.md  faq.md  glossary.md  methodology.md  project_vision.md  release_checklist.md  sample_report.md  troubleshooting.md  tutorial.md
examples/: README.md  analyze_macro_data.py  analyze_macro_risk.py  generate_report.py  run_forecasting.py  run_macro_scenarios.py  run_regression.py
outputs/: .gitkeep  README.md
src/: econkit.py  econkit_cli.py
tests/: test_cli.py  test_econkit.py
